[tool.poetry]
name = "gaphor.github.io"
version = "0.1.0"
description = "The website for Gaphor"
authors = ["Dan Yeaw <dan@yeaw.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.1"
Markdown = "^3.1"
ghp-import = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
